@@ -30,20 +30,19 @@ import org.eclipse.jgit.api.errors.GitAPIException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.stereotype.Service;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
-import de.tum.in.www1.artemis.domain.ProgrammingExercise;
-import de.tum.in.www1.artemis.domain.Repository;
-import de.tum.in.www1.artemis.domain.Submission;
-import de.tum.in.www1.artemis.domain.VcsRepositoryUrl;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import de.tum.in.www1.artemis.domain.*;
 import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
 import de.tum.in.www1.artemis.domain.enumeration.RepositoryType;
-import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
-import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
+import de.tum.in.www1.artemis.domain.participation.*;
 import de.tum.in.www1.artemis.exception.GitException;
 import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
@@ -65,75 +64,157 @@ public class ProgrammingExerciseExportService {
 
     private final StudentParticipationRepository studentParticipationRepository;
 
+    private final ObjectMapper objectMapper;
+
     private final FileService fileService;
 
     private final GitService gitService;
 
     private final ZipFileService zipFileService;
 
+    public static final String EXPORTED_EXERCISE_DETAILS_FILE_PREFIX = "Exercise-Details";
+
+    public static final String EXPORTED_EXERCISE_PROBLEM_STATEMENT_FILE_PREFIX = "Problem-Statement";
+
     public ProgrammingExerciseExportService(ProgrammingExerciseRepository programmingExerciseRepository, StudentParticipationRepository studentParticipationRepository,
-            FileService fileService, GitService gitService, ZipFileService zipFileService) {
+            FileService fileService, GitService gitService, ZipFileService zipFileService, MappingJackson2HttpMessageConverter springMvcJacksonConverter) {
         this.programmingExerciseRepository = programmingExerciseRepository;
         this.studentParticipationRepository = studentParticipationRepository;
+        this.objectMapper = springMvcJacksonConverter.getObjectMapper();
         this.fileService = fileService;
         this.gitService = gitService;
         this.zipFileService = zipFileService;
     }
 
     /**
-     * Export a programming exercise by creating a zip file. The zip file includes all student, template, solution,
-     * and tests repositories.
+     * Export programming exercise material for instructors including instructor repositories, problem statement (.md) and exercise detail (.json).
      *
-     * @param exercise           the programming exercise
-     * @param pathToStoreZipFile The path to a directory that will be used to store the zipped programming exercise.
-     * @param exportErrors       List of failures that occurred during the export
+     * @param exercise     the programming exercise
+     * @param exportErrors List of failures that occurred during the export
      * @return the path to the zip file
      */
-    public Path exportProgrammingExercise(ProgrammingExercise exercise, String pathToStoreZipFile, List<String> exportErrors) {
-        log.info("Exporting programming exercise {} with title {}", exercise.getId(), exercise.getTitle());
-        // Will contain the zipped files. Note that there can be null elements
-        // because e.g exportStudentRepositories returns null if student repositories don't
-        // exist.
-        var zipFiles = new ArrayList<File>();
+    public Path exportProgrammingExerciseInstructorMaterial(ProgrammingExercise exercise, List<String> exportErrors) {
+        // Create export directory for programming exercises
+        var exportDir = Path.of(repoDownloadClonePath, "programming-exercise-material");
+        fileService.createDirectory(exportDir);
 
-        // Lazy load student participations and set the export options.
-        var studentParticipations = studentParticipationRepository.findByExerciseId(exercise.getId()).stream()
-                .map(studentParticipation -> (ProgrammingExerciseStudentParticipation) studentParticipation).collect(Collectors.toList());
-        var exportOptions = new RepositoryExportOptionsDTO();
-        exportOptions.setHideStudentNameInZippedFolder(false);
+        // List to add paths of files that should be contained in the zip folder of exported programming exercise:
+        // i.e., problem statement, exercise details, instructor repositories
+        var pathsToBeZipped = new ArrayList<Path>();
 
-        // Export student repositories
-        var studentZipFilePaths = exportStudentRepositories(exercise, studentParticipations, exportOptions, exportErrors).stream().filter(Objects::nonNull).map(Path::toFile)
-                .collect(Collectors.toList());
-        zipFiles.addAll(studentZipFilePaths);
+        // Add the exported zip folder containing template, solution, and tests repositories
+        pathsToBeZipped.add(exportProgrammingExerciseRepositories(exercise, false, exportDir, exportErrors));
 
-        // Export the template, solution, and tests repositories
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TEMPLATE, exportErrors));
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.SOLUTION, exportErrors));
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TESTS, exportErrors));
+        // Add problem statement as .md file
+        var problemStatementFileExtension = ".md";
+        String problemStatementFileName = EXPORTED_EXERCISE_PROBLEM_STATEMENT_FILE_PREFIX + "-" + exercise.getTitle() + problemStatementFileExtension;
+        String cleanProblemStatementFileName = fileService.removeIllegalCharacters(problemStatementFileName);
+        var problemStatementExportPath = Path.of(exportDir.toString(), cleanProblemStatementFileName);
+        pathsToBeZipped.add(fileService.writeStringToFile(exercise.getProblemStatement(), problemStatementExportPath));
 
-        // Remove null elements and get the file path of each zip file.
-        var zipFilePathsNonNull = zipFiles.stream().filter(Objects::nonNull).map(File::toPath).collect(Collectors.toList());
+        // Add programming exercise details (object) as .json file
+        var exerciseDetailsFileExtension = ".json";
+        String exerciseDetailsFileName = EXPORTED_EXERCISE_DETAILS_FILE_PREFIX + "-" + exercise.getTitle() + exerciseDetailsFileExtension;
+        String cleanExerciseDetailsFileName = fileService.removeIllegalCharacters(exerciseDetailsFileName);
+        var exerciseDetailsExportPath = Path.of(exportDir.toString(), cleanExerciseDetailsFileName);
+        pathsToBeZipped.add(fileService.writeObjectToJsonFile(exercise, this.objectMapper, exerciseDetailsExportPath));
 
+        // Setup path to store the zip file for the exported programming exercise
+        var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
+        String exportedExerciseZipFileName = "Material-" + exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId()
+                + "-" + timestamp + ".zip";
+        String cleanFilename = fileService.removeIllegalCharacters(exportedExerciseZipFileName);
+        Path pathToZippedExercise = Path.of(exportDir.toString(), cleanFilename);
+
+        // Create the zip folder of the exported programming exercise and return the path to the created folder
         try {
-            // Zip the student and instructor repos together.
-            var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
-            var filename = exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId() + "-" + timestamp + ".zip";
-            String cleanFilename = fileService.removeIllegalCharacters(filename);
-            Path pathToZippedExercise = Path.of(pathToStoreZipFile, cleanFilename);
-            zipFileService.createZipFile(pathToZippedExercise, zipFilePathsNonNull, false);
+            zipFileService.createZipFile(pathToZippedExercise, pathsToBeZipped, false);
             return pathToZippedExercise;
         }
         catch (IOException e) {
-            var error = "Failed to export programming exercise " + exercise.getId() + " because the zip file " + pathToStoreZipFile + " could not be created: " + e.getMessage();
+            var error = "Failed to export programming exercise because the zip file " + pathToZippedExercise + " could not be created: " + e.getMessage();
             log.info(error);
             exportErrors.add(error);
             return null;
         }
         finally {
-            // Delete the zipped repo files since we don't need those anymore.
-            zipFilePathsNonNull.forEach(zipFilePath -> fileService.scheduleForDeletion(zipFilePath, 1));
+            // Delete the export directory
+            fileService.scheduleForDirectoryDeletion(exportDir, 5);
         }
+    }
+
+    /**
+     * Export instructor repositories and optionally students' repositories in a zip file.
+     *
+     * @param exercise              the programming exercise
+     * @param includingStudentRepos flag for including the students repos as well
+     * @param outputDir             the path to a directory that will be used to store the zipped programming exercise.
+     * @param exportErrors          List of failures that occurred during the export
+     * @return the path to the zip file
+     */
+    public Path exportProgrammingExerciseRepositories(ProgrammingExercise exercise, Boolean includingStudentRepos, Path outputDir, List<String> exportErrors) {
+        log.info("Exporting programming exercise {} with title {}", exercise.getId(), exercise.getTitle());
+        // List to add paths of files that should be contained in the zip folder of exported programming exercise repositories:
+        // i.e., student repositories (if `includingStudentRepos` is true), instructor repositories template, solution and tests
+        var pathsToBeZipped = new ArrayList<Path>();
+
+        if (includingStudentRepos) {
+            // Lazy load student participation and set the export options
+            var studentParticipations = studentParticipationRepository.findByExerciseId(exercise.getId()).stream()
+                    .map(studentParticipation -> (ProgrammingExerciseStudentParticipation) studentParticipation).collect(Collectors.toList());
+            var exportOptions = new RepositoryExportOptionsDTO();
+            exportOptions.setHideStudentNameInZippedFolder(false);
+
+            // Export student repositories and add them to list
+            var exportedStudentRepositoryFiles = exportStudentRepositories(exercise, studentParticipations, exportOptions, outputDir, exportErrors).stream()
+                    .filter(Objects::nonNull).collect(Collectors.toList());
+            pathsToBeZipped.addAll(exportedStudentRepositoryFiles);
+        }
+
+        // Export the template, solution, and tests repositories and add them to list
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TEMPLATE, outputDir, exportErrors).map(File::toPath).orElse(null));
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.SOLUTION, outputDir, exportErrors).map(File::toPath).orElse(null));
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TESTS, outputDir, exportErrors).map(File::toPath).orElse(null));
+
+        // Setup path to store the zip file for the exported repositories
+        var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
+        String filename = exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId() + "-" + timestamp + ".zip";
+        String cleanFilename = fileService.removeIllegalCharacters(filename);
+        Path pathToZippedExercise = Path.of(outputDir.toString(), cleanFilename);
+
+        // Remove null elements and get the file path of each file to be included, i.e. each entry in the pathsToBeZipped list
+        var includedFilePathsNotNull = pathsToBeZipped.stream().filter(Objects::nonNull).collect(Collectors.toList());
+
+        // Create the zip folder of the exported programming exercise and return the path to the created folder
+        try {
+            zipFileService.createZipFile(pathToZippedExercise, includedFilePathsNotNull, false);
+            return pathToZippedExercise;
+        }
+        catch (IOException e) {
+            var error = "Failed to export programming exercise because the zip file " + pathToZippedExercise + " could not be created: " + e.getMessage();
+            log.info(error);
+            exportErrors.add(error);
+            return null;
+        }
+        finally {
+            // Delete the output directory
+            fileService.scheduleForDirectoryDeletion(outputDir, 2);
+        }
+    }
+
+    /**
+     * Exports a repository available for an instructor/tutor for a given programming exercise. This can be a template,
+     * solution, or tests repository.
+     *
+     * The repository download directory is used as the output directory and is destroyed after 5 minutes.
+     * @param exerciseId The id of the programming exercise that has the repository
+     * @param repositoryType the type of repository to export
+     * @param exportErrors List of failures that occurred during the export
+     * @return a zipped file
+     */
+    public Optional<File> exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, List<String> exportErrors) {
+        Path outputDir = fileService.getUniquePath(repoDownloadClonePath);
+        return exportInstructorRepositoryForExercise(exerciseId, repositoryType, outputDir, exportErrors);
     }
 
     /**
@@ -142,16 +223,17 @@ public class ProgrammingExerciseExportService {
      *
      * @param exerciseId     The id of the programming exercise that has the repository
      * @param repositoryType the type of repository to export
+     * @param outputDir The directory used for store the zip file
      * @param exportErrors   List of failures that occurred during the export
      * @return a zipped file
      */
-    public File exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, List<String> exportErrors) {
+    public Optional<File> exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, Path outputDir, List<String> exportErrors) {
         var exerciseOrEmpty = programmingExerciseRepository.findWithTemplateAndSolutionParticipationById(exerciseId);
         if (exerciseOrEmpty.isEmpty()) {
             var error = "Failed to export instructor repository " + repositoryType + " because the exercise " + exerciseId + " does not exist.";
             log.info(error);
             exportErrors.add(error);
-            return null;
+            return Optional.empty();
         }
 
         var exercise = exerciseOrEmpty.get();
@@ -170,24 +252,26 @@ public class ProgrammingExerciseExportService {
                 var error = "Failed to export instructor repository " + repositoryType + " because the repository url is not defined.";
                 log.info(error);
                 exportErrors.add(error);
-                return null;
+                return Optional.empty();
             }
 
-            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName);
+            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName, outputDir);
             if (zippedRepo != null) {
-                return new File(zippedRepo.toString());
+                return Optional.of(new File(zippedRepo.toString()));
             }
         }
         catch (IOException | UncheckedIOException | GitAPIException | GitException | InterruptedException ex) {
             var error = "Failed to export instructor repository " + repositoryType + " for programming exercise '" + exercise.getTitle() + "' (id: " + exercise.getId() + ")";
-            log.info(error);
+            log.info(error + ": " + ex.getMessage());
             exportErrors.add(error);
         }
-        return null;
+        return Optional.empty();
     }
 
     /**
      * Get participations of programming exercises of a requested list of students packed together in one zip file.
+     *
+     * The repository download directory is used as the output directory and is destroyed after 5 minutes.
      *
      * @param programmingExerciseId   the id of the exercise entity
      * @param participations          participations that should be exported
@@ -199,14 +283,20 @@ public class ProgrammingExerciseExportService {
         ProgrammingExercise programmingExercise = programmingExerciseRepository.findWithTemplateAndSolutionParticipationTeamAssignmentConfigCategoriesById(programmingExerciseId)
                 .get();
 
-        var zippedRepos = exportStudentRepositories(programmingExercise, participations, repositoryExportOptions, new ArrayList<>());
+        Path outputDir = fileService.getUniquePath(repoDownloadClonePath);
+        var zippedRepos = exportStudentRepositories(programmingExercise, participations, repositoryExportOptions, outputDir, new ArrayList<>());
 
-        // delete project root folder
-        final var targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-        deleteReposDownloadProjectRootDirectory(programmingExercise, targetPath);
-
-        // Create a zip folder containing the zipped repositories.
-        return createZipWithAllRepositories(programmingExercise, zippedRepos);
+        try {
+            // Create a zip folder containing the zipped repositories.
+            return createZipWithAllRepositories(programmingExercise, zippedRepos, outputDir);
+        }
+        catch (IOException ex) {
+            log.error("Creating zip file for programming exercise {} did not work correctly: {} ", programmingExercise.getTitle(), ex.getMessage());
+            return null;
+        }
+        finally {
+            fileService.scheduleForDirectoryDeletion(outputDir, 5);
+        }
     }
 
     /**
@@ -215,11 +305,12 @@ public class ProgrammingExerciseExportService {
      * @param programmingExercise     the programming exercise
      * @param participations          participations that should be exported
      * @param repositoryExportOptions the options that should be used for the export
+     * @param outputDir The directory used for store the zip file
      * @param exportErrors            A list of errors that occured during export (populated by this function)
      * @return List of zip file paths
      */
     public List<Path> exportStudentRepositories(ProgrammingExercise programmingExercise, @NotNull List<ProgrammingExerciseStudentParticipation> participations,
-            RepositoryExportOptionsDTO repositoryExportOptions, List<String> exportErrors) {
+            RepositoryExportOptionsDTO repositoryExportOptions, Path outputDir, List<String> exportErrors) {
         var programmingExerciseId = programmingExercise.getId();
         if (repositoryExportOptions.isExportAllParticipants()) {
             log.info("Request to export all student or team repositories of programming exercise {} with title '{}'", programmingExerciseId, programmingExercise.getTitle());
@@ -229,12 +320,12 @@ public class ProgrammingExerciseExportService {
                     programmingExercise.getTitle(), participations.stream().map(StudentParticipation::getParticipantIdentifier).collect(Collectors.joining(", ")));
         }
 
-        List<Path> zippedRepos = Collections.synchronizedList(new ArrayList<>());
-        participations.parallelStream().forEach(participation -> {
+        List<Path> exportedStudentRepositories = new ArrayList<>();
+        participations.forEach(participation -> {
             try {
-                var zippedRepo = createZipForRepositoryWithParticipation(programmingExercise, participation, repositoryExportOptions);
-                if (zippedRepo != null) {
-                    zippedRepos.add(zippedRepo);
+                Path zipFile = createZipForRepositoryWithParticipation(programmingExercise, participation, repositoryExportOptions, outputDir);
+                if (zipFile != null) {
+                    exportedStudentRepositories.add(zipFile);
                 }
             }
             catch (IOException | UncheckedIOException e) {
@@ -243,7 +334,7 @@ public class ProgrammingExerciseExportService {
                 exportErrors.add(error);
             }
         });
-        return zippedRepos;
+        return exportedStudentRepositories;
     }
 
     /**
@@ -251,28 +342,24 @@ public class ProgrammingExerciseExportService {
      *
      * @param repositoryUrl The url of the repository to zip
      * @param zipFilename   The name of the zip file
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return The path to the zip file.
      * @throws IOException if the zip file couldn't be created
      * @throws GitAPIException if the repo couldn't get checked out
      * @throws InterruptedException if the repo couldn't get checked out
      */
-    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename)
+    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename, Path outputDir)
             throws IOException, GitAPIException, GitException, InterruptedException, UncheckedIOException {
-        var repoProjectPath = fileService.getUniquePathString(repoDownloadClonePath);
-        Repository repository = null;
+        var repositoryDir = fileService.getUniquePathString(outputDir.toString());
+        Repository repository;
 
-        try {
-            // Checkout the repository
-            repository = gitService.getOrCheckoutRepository(repositoryUrl, repoProjectPath, true);
-            gitService.resetToOriginMaster(repository);
+        // Checkout the repository
+        repository = gitService.getOrCheckoutRepository(repositoryUrl, repositoryDir, true);
+        gitService.resetToOriginMaster(repository);
+        repository.close();
 
-            // Zip it and return the path to the file
-            return gitService.zipRepository(repository, zipFilename, repoProjectPath);
-        }
-        finally {
-            deleteTempLocalRepository(repository);
-            fileService.scheduleForDirectoryDeletion(Path.of(repoProjectPath), 5);
-        }
+        // Zip it and return the path to the file
+        return gitService.zipRepository(repository, zipFilename, repositoryDir);
     }
 
     /**
@@ -280,32 +367,22 @@ public class ProgrammingExerciseExportService {
      *
      * @param programmingExercise The programming exercise to which all repos belong to
      * @param pathsToZippedRepos  The paths to all zipped repositories
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return the zip file
      */
-    private File createZipWithAllRepositories(ProgrammingExercise programmingExercise, List<Path> pathsToZippedRepos) {
+    private File createZipWithAllRepositories(ProgrammingExercise programmingExercise, List<Path> pathsToZippedRepos, Path outputDir) throws IOException {
         if (pathsToZippedRepos.isEmpty()) {
             log.warn("The zip file could not be created. Ignoring the request to export repositories for exercise {}", programmingExercise.getTitle());
             return null;
         }
 
-        try {
-            log.debug("Create zip file for {} repositorie(s) of programming exercise: {}", pathsToZippedRepos.size(), programmingExercise.getTitle());
+        log.debug("Create zip file for {} repositorie(s) of programming exercise: {}", pathsToZippedRepos.size(), programmingExercise.getTitle());
+        String filename = programmingExercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + programmingExercise.getShortName() + "-" + System.currentTimeMillis()
+                + ".zip";
 
-            String filename = programmingExercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + programmingExercise.getShortName() + "-"
-                    + System.currentTimeMillis() + ".zip";
-            Path zipFilePath = Paths.get(pathsToZippedRepos.get(0).getParent().toString(), filename);
-            zipFileService.createZipFile(zipFilePath, pathsToZippedRepos, false);
-            fileService.scheduleForDeletion(zipFilePath, 5);
-            return new File(zipFilePath.toString());
-        }
-        catch (IOException ex) {
-            log.error("Creating zip file for programming exercise {} did not work correctly: {} ", programmingExercise.getTitle(), ex.getMessage());
-            return null;
-        }
-        finally {
-            // we do some cleanup here to prevent future errors with file handling
-            deleteTempZipRepoFiles(pathsToZippedRepos);
-        }
+        Path zipFilePath = Path.of(outputDir.toString(), filename);
+        zipFileService.createZipFile(zipFilePath, pathsToZippedRepos, false);
+        return new File(zipFilePath.toString());
     }
 
     /**
@@ -315,24 +392,20 @@ public class ProgrammingExerciseExportService {
      * @param programmingExercise     The programming exercise for the participation
      * @param participation           The participation, for which the repository should get zipped
      * @param repositoryExportOptions The options, that should get applied to the zipeed repo
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return The checked out and zipped repository
      * @throws IOException if zip file creation failed
      */
     private Path createZipForRepositoryWithParticipation(final ProgrammingExercise programmingExercise, final ProgrammingExerciseStudentParticipation participation,
-            final RepositoryExportOptionsDTO repositoryExportOptions) throws IOException, UncheckedIOException {
+            final RepositoryExportOptionsDTO repositoryExportOptions, Path outputDir) throws IOException, UncheckedIOException {
         if (participation.getVcsRepositoryUrl() == null) {
             log.warn("Ignore participation {} for export, because its repository URL is null", participation.getId());
             return null;
         }
 
-        String targetPath = null;
-        Repository repository = null;
         try {
-            // Construct a unique path that will contain repo contents
-            targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-
             // Checkout the repository
-            repository = gitService.getOrCheckoutRepository(participation, targetPath);
+            Repository repository = gitService.getOrCheckoutRepository(participation, outputDir.toString());
             if (repository == null) {
                 log.warn("Cannot checkout repository for participation id: {}", participation.getId());
                 return null;
@@ -366,15 +439,11 @@ public class ProgrammingExerciseExportService {
             }
 
             log.debug("Create temporary zip file for repository {}", repository.getLocalPath().toString());
-            return gitService.zipRepositoryWithParticipation(repository, targetPath, repositoryExportOptions.isHideStudentNameInZippedFolder());
+            return gitService.zipRepositoryWithParticipation(repository, outputDir.toString(), repositoryExportOptions.isHideStudentNameInZippedFolder());
         }
         catch (InterruptedException | GitAPIException | GitException e) {
             log.error("Cannot create zip for participation id {} because the repo download clone path is invalid.", participation.getId());
             return null;
-        }
-        finally {
-            deleteTempLocalRepository(repository);
-            fileService.scheduleForDirectoryDeletion(Path.of(targetPath), 5);
         }
     }
 
